2002-04-19  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "zh_TW" to ALL_LINGUAS.

2002-03-26  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gconf/gconftool.c: (main): back from HEAD (honor
	GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL to do nothing for
	--makefile-install-mode)

2002-03-23  Havoc Pennington  <hp@pobox.com>

	* gconf/gconfd.c (gconf_main): change exit timeout to 2 minutes

2002-03-14  Havoc Pennington  <hp@redhat.com>

	* configure.in: 1.0.9

2002-03-14  Havoc Pennington  <hp@redhat.com>

	* gconf/gconf-sanity-check.c: add sanity checker from HEAD (minus
	the GUI parts)
	
2002-03-10  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf-sources.c (gconf_sources_query_metainfo): fix from
	HEAD, replace a "mi" with "this_mi"

	* backends/xml-backend.c (query_metainfo): fix from HEAD, use
	relative key to look up metainfo

2002-02-05  Abel Cheung  <maddog@linux.org.hk>

	* configure.in (ALL_LINGUAS): zh_CN.GB2312 -> zh_CN

2002-02-04  Havoc Pennington  <hp@redhat.com>

	* autogen.sh (ACLOCAL): prefer automake-1.4 etc.

	* configure.in: bump version to 1.0.8

2002-01-23  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf-internals.c (gconf_activate_server): try to use
	gconfd-2 if it exists

2002-01-04  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure,in (ALL_LINGUAS): Added "eu".

2001-12-17  Havoc Pennington  <hp@pobox.com>

        Backport from HEAD
	
	* backends/xml-dir.c (dir_get_value): always get schema name, not
	just if value is unset

	* gconf/gconf-sources.c (gconf_sources_query_value): don't look
	for a default value for the schema. Useless and adds a bit of
	inefficiency.

	* gconf/gconf-sources.c (gconf_sources_query_value): Fix this so
	Gergo's bug doesn't happen; hope no other semantic gets broken.
	
2001-12-17  Havoc Pennington  <hp@pobox.com>

        Backport from HEAD
	
	* gconf/gconf-listeners.c: reference count the listeners, make a
	copy of listener lists and ref all listeners prior to doing the